[gd_scene load_steps=5 format=2]

[ext_resource path="res://icons/godoticon.tres" type="Texture" id=1]
[ext_resource path="res://actions/HUD.gd" type="Script" id=2]
[ext_resource path="res://actions/StatPage.tscn" type="PackedScene" id=3]
[ext_resource path="res://actions/EffectPage.tscn" type="PackedScene" id=4]

[node name="HUD" type="Node2D"]
z_index = 5
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 25.0
margin_bottom = 25.0
color = Color( 0.196078, 0.196078, 0.392157, 1 )

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 2.5
margin_top = 2.5
margin_right = 22.5
margin_bottom = 22.5
color = Color( 0.129412, 0.639216, 0.639216, 1 )

[node name="Button" type="TextureButton" parent="."]
margin_left = 2.5
margin_top = 2.5
margin_right = 22.5
margin_bottom = 22.5
shortcut_in_tooltip = false
texture_normal = ExtResource( 1 )

[node name="Line2D" type="Line2D" parent="."]
visible = false
points = PoolVector2Array( 25, 0, 35, -10, 100, -10 )
width = 1.0
default_color = Color( 0.721569, 0.45098, 0.2, 1 )

[node name="StatPage" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 35, -10 )
scale = Vector2( 0.8, 0.8 )

[node name="EffectPage" parent="." instance=ExtResource( 4 )]
visible = false
position = Vector2( 35, -10 )
scale = Vector2( 0.8, 0.8 )

[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
